<resources>
    <string name="app_name">News Buddy</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>
    <string name="banner_ad_unit_id">ca-app-pub-1101522621768987/2571111358</string>
    <string name="unknown_issue">Interrupted by unknown issue,\n Please try again</string>
    <string name="swipe_left_right_to_read_previous_next_articles">Swipe left/right to read previous/next articles</string>
    <string name="got_it">GOT IT</string>
    <string name="title_activity_sources">News Papers</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_favorite_aricles">About Us</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_credits">Credits</string>
    <string name="nav_notifications">Notifications</string>
    <string name="login_message">Keeps you informed of daily news from top 50 news sources in a most efficient way</string>
    <string name="app_logo">app logo</string>
    <string name="notifications">Notifications</string>
    <string name="no_notifications_msg">No Notifications received yet</string>
    <string name="nav_rateus">Rate Us</string>
    <string name="credits_android_support_library">Android Support Library</string>
    <string name="credits_https_developer_android_com">https://developer.android.com/</string>
    <string name="credit_firebase">Firebase</string>
    <string name="credit_https_firebase_google_com">https://firebase.google.com/</string>
    <string name="credit_news_api">News API</string>
    <string name="credit_https_newsapi_org">https://newsapi.org/</string>
    <string name="credit_rx_java">Rx Java</string>
    <string name="credit_https_github_com_reactivex_rxjava">https://github.com/ReactiveX/RxJava</string>
    <string name="credit_butterknife">Butterknife</string>
    <string name="credit_http_jakewharton_github_io_butterknife">http://jakewharton.github.io/butterknife/</string>
    <string name="credit_glide_image_library">Glide Image Library</string>
    <string name="credit_https_github_com_bumptech_glide">https://github.com/bumptech/glide</string>
    <string name="creidt_retrofit">Retrofit</string>
    <string name="credit_https_square_github_io_retrofit">https://square.github.io/retrofit/</string>
    <string name="credit_event_bus">Event Bus</string>
    <string name="credit_http_greenrobot_org_eventbus">http://greenrobot.org/eventbus/</string>
    <string name="credit_circular_image_view">Circular Image View</string>
    <string name="https_gitcredit_hub_com_lopspower_circularimageview">https://github.com/lopspower/CircularImageView</string>
    <string name="about_us_us">display live news headlines and images from the top 50 sources</string>
    <string name="about_us_http_mobileappdev_in">http://mobileappdev.in</string>
    <string name="aboutus_satya_mobileappdev_in">satya@mobileappdev.in</string>
    <string name="refresh">Refresh</string>
    <string name="msg_playstore_app_not_found">" App not found in Play store"</string>
    <string name="no_internet">No internet connection, \nCheck your WI-FI or Data connection</string>
    <string name="error_connrcting_servers">Problem with connecting our servers</string>
    <string name="error_connection">No internet connection, \nCheck your WI-FI or Data connection</string>
    <string name="errr_network">Network Problem \nPlease try again</string>
    <string name="error_something_wrong">Something wrong happened \nPlease try again</string>
    <string name="error_no_newspapers_found">"No News papers found "</string>
    <string name="welcome_to_news_app">Welcome to News App</string>
    <string name="widget">Widget</string>
    <string name="news_app_logo">News App Logo</string>
    <string name="news_detail_image">News Detail Image</string>
    <string name="read_more">Read More</string>
    <string name="news_widget">News Widget</string>
    <string name="play_services_error">Google Play Services error.</string>
    <string name="loading">Loading</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="invalid_url">Url not valid, Navigating to Home screen</string>
</resources>
