...
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id" />

            <Button
                android:id="@+id/readMoreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/ad_view"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
...
